# image_processing

apps/: CMakeLists.txt
apps/ImageOrienter/: CMakeLists.txt  ImageOrienter.cpp
apps/ImageOrienter/ParameterFileParserLib/: CMakeLists.txt  itkParameterFileParser.cxx
apps/N4BiasCorrection/: CMakeLists.txt  N4BiasCorrection.cpp
scripts/: class_example.py  image_to_mask.py
